# hyprsettings

./: .gitignore  README.md  flake.nix  io.github.posaydone.hyprsettings.json  meson.build
data/: io.github.posaydone.hyprsettings.desktop.in  io.github.posaydone.hyprsettings.gschema.xml  io.github.posaydone.hyprsettings.metainfo.xml.in  meson.build
data/icons/: meson.build
hyprsettings/: hyprsettings.gresource.xml  hyprsettings.in  main.py  meson.build  sidebar_box.blp  sidebar_box.py  sidebar_item.blp  sidebar_item.py  style.css  utils.py  wallpaper_item.blp  wallpaper_item.py  window.blp  window.py
hyprsettings/pages/: appearance.blp  appearance.py  network.blp  network.py
hyprsettings/widgets/: sidebar_box.py  sidebar_item.py  wallpaper_item.py
nix/: default.nix  devshell.nix
po/: POTFILES  meson.build
